--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/blank"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity
@@ -30,7 +30,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".DatabaseTest"
