--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+
+    implementation 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
