--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/search_logo"
         android:label="Search App"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/search_logo"
         android:supportsRtl="true">
         <receiver android:name=".MainActivity$switchButtonListener" />
+
+
 
         <activity
             android:name=".WelcomeActivity"
