--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/search_logo"
+        android:icon="@mipmap/ic_launcher"
         android:label="Search App"
         android:roundIcon="@drawable/search_logo"
         android:supportsRtl="true">
